deploy/odd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-odd
  name: opengauss-odd
