deploy/odd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odd-deployment
  namespace: opengauss-odd
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: odd-deployment
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: odd-deployment
    spec:
      containers:
      - name: odd
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-odd:f80384ac31293ec520be65ce1372822202fe6d03
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
