deploy/odd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odd-service
  namespace: opengauss-odd
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: odd-deployment
  type: ClusterIP
